# tapas-fpl-app

./: .gitignore  CLAUDE.md  DNS.md  FIXTURE_DIFFICULTY_REVIEW.md  RECOMMENDATIONS.md  SCALING_PLAN.md  SCALING_TODO.md  TODO.md  biome.json
backend/: .env.example  .gitignore  BACKEND.md  DB.md  Dockerfile  FPL_RULES.md  README.md  crontab  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py
backend/docs/: dashboard-endpoint-plan.md  fpl-api-vs-db-analysis.md  head-to-head-enhancement-plan.md  league-ownership-plan.md  scheduled-updates-plan.md
backend/migrations/: 001_core_tables.sql  002_historical.sql  003_analytics.sql  004_points_against.sql  005_player_fixture_stats.sql  005_season_2025_26.sql  006_player_fixture_stats.sql  006_player_fixture_stats_improvements.sql  007_player_fixture_stats_improvements.sql  008_chip_usage.sql  009_fix_points_against_pk.sql  010_collection_status.sql  011_pfs_captain_lookup_index.sql  012_fix_fixture_pk.sql  013_league_ownership_vice_captain.sql
backend/scripts/: backfill_league_ownership.py  collect_manager_snapshots.py  collect_points_against.py  compute_league_ownership.py  migrate.py  scheduled_update.py  seed_test_data.py  test_collection.py  test_small_collection.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_backfill_league_ownership.py  test_bootstrap_cache.py  test_calculations.py  test_chips_api.py  test_chips_service.py  test_compute_league_ownership.py  test_config.py  test_dashboard_routes.py  test_fixtures_api.py  (+11 more)
(+375 files in other folders)
